fixed layout problem

--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -12,6 +12,7 @@
   @media screen and (max-width: 768px) {
     padding: 1rem;
     flex-direction: column;
+    min-height: 10rem;
   }
 
   .copyright {
