--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -3,18 +3,14 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  @media screen and (max-width: 768px) {
-    min-height: 100vh;
-    min-height: -webkit-fill-available;
-  }
-}
+  // min-height: -webkit-fill-available;
+  .content {
+    flex: 1;
+    padding: 2rem 10rem;
+    background-color: $color-secondary;
 
-.content {
-  flex: 1;
-  padding: 2rem 10rem;
-  background-color: $color-secondary;
-
-  @media screen and (max-width: 768px) {
-    padding: 2rem 3rem;
+    @media screen and (max-width: 768px) {
+      padding: 2rem 3rem;
+    }
   }
 }
